syntax = "proto3";

package perspective.proto;

message MultiplexEnvelope {
  uint32 id = 1;
  bytes payload = 2;
}

message Request {
  oneof client_req {
    MakeTableReq make_table_req = 1;
    TableSizeReq table_size_req = 2;
    TableToArrow to_arrow_req = 3;
  }
}

message Response {
  oneof client_resp {
    MakeTableResp make_table_resp = 1;
    TableSizeResp table_size_resp = 2;
    ArrowStreamResp arrow_stream_resp = 3;
  }
}

message TableToArrow { }

message ArrowStreamResp {
  bytes data = 1;
}

message MakeTableReq {
}
message MakeTableResp {
  uint32 id = 1;
}

message TableSizeReq {
}

message TableSizeResp {
  uint64 size = 2;
}


enum DType {
  DTYPE_UINT32 = 0;
  DTYPE_UINT64 = 1;
  DTYPE_INT32 = 2;
  DTYPE_INT64 = 3;
  DTYPE_FLOAT32 = 4;
  DTYPE_FLOAT64 = 5;
  DTYPE_BOOL = 6;
  DTYPE_TIME = 7;
  DTYPE_DATE = 8;
  DTYPE_STR = 9;
  DTYPE_OBJECT = 10;
}

message Schema {
  repeated Field fields = 1;
}

message Field {
  string name = 1;
  DType type = 2;
}

message TableCreateReq {
  // Schema schema = 1;
  optional uint32 reserve_rows = 2;
}

message TableCreateResp {
  uint32 id = 1;
}